--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="names_input">inter names</label>
-    <input type="text" id="names_input">
-    <button onclick="getNamesAndSeries()">click</button>
+   
+    <!-- <button onclick="getNamesAndSeries()">click</button> -->
 
     <script src="main.js"></script>
 </body>
