--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    
     <!-- <button onclick="getNamesAndSeries()">click</button> -->
+    <div id="element"></div>
 
     <script src="main.js"></script>
 </body>
